# path-tracer-elec-a7151

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md
files/: diamond.json  example.json  scene1.json  scene2.json  scene3.json  scene4.json  scene5.json
src/: camera.h  colour.h  filemanager.hpp  main.cpp  objects.cpp  objects.hpp  pathtracer.cpp  pathtracer.hpp  ray.hpp  renderer.h  scene.h  vector.hpp
src/utils/: colour.hpp  filemanager.cpp  filemanager.hpp  material.cpp  material.hpp  materialbuilder.hpp  rand.cpp  rand.h  ray.hpp  vector.hpp
src/world/: camera.h  objects.cpp  objects.hpp  scene.cpp  scene.h
src/world/objects/: objects.cpp  objects.hpp  parallelogram.cpp  parallelogram.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
tests/: CMakeLists.txt  DoctestMain.cpp  FileManagerTests.cpp  MaterialTests.cpp  RandTests.cpp  RayTests.cpp  SphereTests.cpp  TriangleTests.cpp  VectorTests.cpp  doctest.h  test_filemanager.cpp
tests/filemanager_tests/: test_write_output.cpp
tests/rand_tests/: CMakeLists.txt  main.cpp
tests/ray_tests/: .main.cpp.swp  main.cpp  makefile
tests/sphere_tests/: main.cpp  makefile
tests/triangle_tests/: main.cpp  makefile
tests/vector_tests/: main.cpp  makefile
